Fix dark mode in new widget

--- a/fern/assets/styles/globals.css
+++ b/fern/assets/styles/globals.css
@@ -204,7 +204,7 @@ elevenlabs-convai {
   --el-base-active: var(--accent-4);
   --el-base-border: var(--accent-5);
   --el-base-subtle: var(--grayscale-a11);
-  --el-base-primary: var(--color-black);
+  --el-base-primary: var(--grayscale-contrast);
 
   --el-accent: var(--accent);
   --el-accent-hover: var(--accent-10);
@@ -215,8 +215,4 @@ elevenlabs-convai {
   --el-input-radius: calc(var(--radius) * 2);
   --el-sheet-radius: calc(var(--radius) * 3);
   --el-compact-sheet-radius: calc(var(--radius) * 3);
-}
-
-:root[class='dark'] elevenlabs-convai {
-  --el-base-primary: var(--color-white);
 }
